<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <parent>
        <groupId>org.dromara</groupId>
        <artifactId>ruoyi-modules</artifactId>
        <version>${revision}</version>
        <relativePath>../pom.xml</relativePath>
    </parent>

    <groupId>org.dromara.merchant</groupId>
    <artifactId>ruoyi-merchant-nearby</artifactId>
    <packaging>pom</packaging>
    <name>ruoyi-merchant-nearby</name>

    <properties>
        <maven.compiler.source>17</maven.compiler.source>
        <maven.compiler.target>${maven.compiler.source}</maven.compiler.target>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
        <maven.deploy.skip>true</maven.deploy.skip>
        <cola.components.version>5.0.0</cola.components.version>
        <mapstruct.version>1.6.3</mapstruct.version>
    </properties>

    <modules>
        <module>ruoyi-merchant-nearby-client</module>
        <module>ruoyi-merchant-nearby-adapter</module>
        <module>ruoyi-merchant-nearby-app</module>
        <module>ruoyi-merchant-nearby-domain</module>
        <module>ruoyi-merchant-nearby-infrastructure</module>
        <module>ruoyi-merchant-nearby-starter</module>
    </modules>

    <dependencies>
        <dependency>
            <groupId>org.projectlombok</groupId>
            <artifactId>lombok</artifactId>
            <scope>provided</scope>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <scope>test</scope>
        </dependency>
    </dependencies>

    <dependencyManagement>
        <dependencies>
            <!--Project modules-->
            <dependency>
                <groupId>org.dromara.merchant</groupId>
                <artifactId>ruoyi-merchant-nearby-adapter</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dromara.merchant</groupId>
                <artifactId>ruoyi-merchant-nearby-client</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dromara.merchant</groupId>
                <artifactId>ruoyi-merchant-nearby-app</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dromara.merchant</groupId>
                <artifactId>ruoyi-merchant-nearby-domain</artifactId>
                <version>${project.version}</version>
            </dependency>
            <dependency>
                <groupId>org.dromara.merchant</groupId>
                <artifactId>ruoyi-merchant-nearby-infrastructure</artifactId>
                <version>${project.version}</version>
            </dependency>
            <!--Project modules End-->

            <dependency>
                <groupId>org.dromara</groupId>
                <artifactId>ruoyi-common-core</artifactId>
                <version>${revision}</version>
            </dependency>

            <dependency>
                <groupId>com.alibaba.cola</groupId>
                <artifactId>cola-components-bom</artifactId>
                <version>${cola.components.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <dependency>
                <groupId>org.springframework.boot</groupId>
                <artifactId>spring-boot-dependencies</artifactId>
                <version>${spring-boot.version}</version>
                <type>pom</type>
                <scope>import</scope>
            </dependency>
            <!--Validation API-->
            <!--
                - javax.validation:javax.validation
                - org.hibernate.validator:hibernate-validator
                - org.glassfish:jakarta.el
                are declared in spring-boot-dependencies
            -->
            <dependency>
                <groupId>javax.el</groupId>
                <artifactId>javax.el-api</artifactId>
                <version>3.0.0</version>
            </dependency>
            <!--Validation API End -->

            <!-- Misc -->
            <dependency>
                <groupId>com.alibaba</groupId>
                <artifactId>fastjson</artifactId>
                <version>1.2.83</version>
            </dependency>
            <!-- Misc End -->
        </dependencies>
    </dependencyManagement>
</project>
